<resources>
    <string name="app_name">Nerd Alert</string>

    <string name="title_nerds">Nerds</string>
    <string name="title_beacons">Beacons</string>

    <string name="nametag_hello">HELLO!</string>
    <string name="nametag_mynameis">my name is</string>
    <string name="nametag_name">Name</string>
    <string name="nametag_tagline">Tagline</string>

    <string name="nerds_text">No Nerds Nearby</string>

    <string name="beacons_text">Exercise for the reader</string>
    <string name="beacons_url">https://goo.gl/3P5KnI</string>

    <string name="google_api_connection_failed">Connection to Google API Client Failed</string>
    <string name="google_api_connection_suspended">Google API Client Suspended</string>
    <string name="google_api_network_lost">Network Lost</string>
    <string name="google_api_service_disconnected">Service Disconnected</string>
    <string name="google_api_unknown">Unknown Reason</string>

    <string name="permission_denied_nearby">Permission not granted. Unable to communicate with Nearby devices.</string>
    <string name="permission_denied_contacts">Permission not granted. Unable to load profile information.</string>
    <string name="network_unavailable">Internet access required. Fix in \'Settings\' and try again.</string>

    <string name="accessibility_my_photo">My Photo</string>
    <string name="accessibility_neighbor_photo">Neighbor Photo</string>

</resources>
