<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp" >

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/nametag_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/nametag_hello"
                    android:paddingTop="6dp"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:background="@color/blue"
                    android:textColor="@color/color_text_light"
                    app:layout_widthPercent="100%" />

                <TextView
                    android:id="@+id/nametag_subheader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/nametag_header"
                    android:text="@string/nametag_mynameis"
                    android:layout_marginBottom="12dp"
                    android:paddingBottom="6dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@color/blue"
                    android:textColor="@color/color_text_light"
                    app:layout_widthPercent="100%" />

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/nametag_subheader"
                    android:src="@drawable/koala"
                    app:layout_widthPercent="25%"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nametag_subheader"
                    android:layout_toRightOf="@id/photo"
                    app:layout_widthPercent="75%">
                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:inputType="textPersonName"
                        android:hint="@string/nametag_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tagline_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_wrapper"
                    android:layout_toRightOf="@id/photo"
                    app:layout_widthPercent="75%">
                    <EditText
                        android:id="@+id/tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:inputType="textAutoComplete"
                        android:hint="@string/nametag_tagline" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/blue"
                    android:layout_below="@id/photo"
                    app:layout_widthPercent="100%"/>

            </android.support.percent.PercentRelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</android.support.design.widget.CoordinatorLayout>
