<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 The Nerdery, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <android.support.percent.PercentRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/nametag_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/nametag_hello"
                        android:paddingTop="6dp"
                        android:textSize="36sp"
                        android:gravity="center"
                        android:background="@color/color_accent"
                        android:textColor="@color/color_text_light"
                        app:layout_widthPercent="100%" />

                    <TextView
                        android:id="@+id/nametag_subheader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/nametag_header"
                        android:text="@string/nametag_mynameis"
                        android:layout_marginBottom="12dp"
                        android:paddingBottom="6dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:background="@color/color_accent"
                        android:textColor="@color/color_text_light"
                        app:layout_widthPercent="100%" />

                    <ImageView
                        android:id="@+id/my_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/nametag_subheader"
                        android:contentDescription="@string/accessibility_my_photo"
                        app:layout_widthPercent="30%"
                        tools:src="@drawable/ic_contact_photo" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/name_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/nametag_subheader"
                        android:layout_toEndOf="@id/my_photo"
                        app:layout_widthPercent="70%">

                        <EditText
                            android:id="@+id/my_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:singleLine="true"
                            android:textSize="14sp"
                            android:inputType="textPersonName"
                            android:hint="@string/nametag_name"
                            android:imeOptions="actionDone|flagNoExtractUi"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tagline_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_wrapper"
                        android:layout_toEndOf="@id/my_photo"
                        app:layout_widthPercent="75%">

                        <EditText
                            android:id="@+id/my_tagline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textSize="14sp"
                            android:inputType="textAutoComplete"
                            android:hint="@string/nametag_tagline"
                            android:imeOptions="actionDone|flagNoExtractUi"/>
                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="14dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/color_accent"
                        android:layout_below="@id/my_photo"
                        app:layout_widthPercent="100%" />

                </android.support.percent.PercentRelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                app:tabMode="fixed"
                app:tabGravity="fill"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        </android.support.design.widget.AppBarLayout>

        <com.nerderylabs.android.nerdalert.ui.widget.NoSwipeViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_nearby"
        app:fabSize="normal"
        app:elevation="4dp" />

</RelativeLayout>